# bup-rust

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  dockerfile  prod.sh
frontend/: Cargo.toml
frontend/src/: main.rs
server/: Cargo.toml
server/.cargo/: config.toml
server/src/: error.rs  main.rs
server/src/_dev_utils/: dev_db.rs  mod.rs
server/src/log/: mod.rs
server/src/sql/dev_initial/: 01-create-schema.sql
server/src/web/: error.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs
