[package]
name = "bup-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
serde = "1.0.188"
sqlx = { version = "0.7.1", features = ["postgres", "any", "runtime-tokio-rustls"] }
tokio = { version = "1.31.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
